--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -570,7 +570,7 @@
 		@include vendor('display', 'flex');
 		@include vendor('flex-direction', 'column');
 		@include vendor('justify-content', 'space-between');
-		background: #222629 url('images/Oerlay.png');
+		background: #222629 url('images/Overlay.png');
 		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
 		color: #fff;
 		height: 100%;
@@ -760,7 +760,7 @@
 
 			&.one {
 				background-color: #81918E;
-				background-image: url('../../images/Overlay.png');
+				background-image: url('../../images/banner.jpg');
 			}
 
 			&.two {
